# strive

./: .devcontainer.json  .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  CHANGELOG.markdown  CHANGELOG.md  HLint.hs  LICENSE.md  Makefile  README.lhs  README.markdown  README.md  Vagrantfile  cabal.project  compose.yaml  index.html  package.yaml  params.json  scurry.cabal  stack.yaml  strive.cabal
.github/workflows/: ci.yaml  ci.yml  workflow.yaml
config/: brittany.yaml  hlint.yaml
examples/: suffer_calcutor.hs
src/lib/Strive/: Actions.hs  Lenses.hs
src/lib/Strive/Actions/: Activities.hs  Authentication.hs  Efforts.hs  Friends.hs  Gear.hs  Segments.hs  Streams.hs
src/lib/Strive/Internal/: HTTP.hs  Lenses.hs  Options.hs  TH.hs
src/lib/Strive/Options/: Athletes.hs  Authentication.hs  Comments.hs  Segments.hs
src/lib/Strive/Types/: Activities.hs  Athletes.hs  Photos.hs  Polylines.hs  Segments.hs  Streams.hs  Uploads.hs
test-suite/: HLint.hs
