cabal-version: 2.2

name: strive
version: 6.0.0.5

synopsis: A client for the Strava V3 API.
description: Strive is a client for the Strava V3 API.

build-type: Simple
category: API
extra-source-files: CHANGELOG.markdown README.markdown
license-file: LICENSE.markdown
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/strive
  type: git

flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True

common library
  build-depends:
    , aeson >= 2.0.3 && < 2.2
    , base >= 4.15.0 && < 4.18
    , bytestring >= 0.10.12 && < 0.12
    , data-default >= 0.7.1 && < 0.8
    , gpolyline >= 0.1.0 && < 0.2
    , http-client >= 0.7.13 && < 0.8
    , http-client-tls >= 0.3.6 && < 0.4
    , http-types >= 0.12.3 && < 0.13
    , template-haskell >= 2.17.0 && < 2.20
    , text >= 1.2.5 && < 1.3 || >= 2.0 && < 2.1
    , time >= 1.9.3 && < 1.13
    , transformers >= 0.5.6 && < 0.6
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  if flag(pedantic)
    ghc-options: -Werror

library
  import: library

  exposed-modules:
    Strive
    Strive.Actions
    Strive.Actions.Activities
    Strive.Actions.Athletes
    Strive.Actions.Authentication
    Strive.Actions.Clubs
    Strive.Actions.Comments
    Strive.Actions.Efforts
    Strive.Actions.Friends
    Strive.Actions.Gear
    Strive.Actions.Kudos
    Strive.Actions.Photos
    Strive.Actions.Segments
    Strive.Actions.Streams
    Strive.Actions.Uploads
    Strive.Aliases
    Strive.Client
    Strive.Enums
    Strive.Internal.HTTP
    Strive.Internal.Lenses
    Strive.Internal.Options
    Strive.Internal.TH
    Strive.Lenses
    Strive.Options
    Strive.Options.Activities
    Strive.Options.Athletes
    Strive.Options.Authentication
    Strive.Options.Clubs
    Strive.Options.Comments
    Strive.Options.Friends
    Strive.Options.Kudos
    Strive.Options.Segments
    Strive.Options.Streams
    Strive.Options.Uploads
    Strive.Types
    Strive.Types.Activities
    Strive.Types.Athletes
    Strive.Types.Authentication
    Strive.Types.Clubs
    Strive.Types.Comments
    Strive.Types.Efforts
    Strive.Types.Gear
    Strive.Types.Photos
    Strive.Types.Polylines
    Strive.Types.Segments
    Strive.Types.Streams
    Strive.Types.Uploads
    Strive.Utilities
  hs-source-dirs: source/library
