cabal-version: 2.2
name: strive
version: 6.0.0.12
synopsis: A client for the Strava V3 API.
description: Strive is a client for the Strava V3 API.
build-type: Simple
category: API
extra-doc-files:
  CHANGELOG.md
  README.md

license-file: LICENSE.txt
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/strive
  type: git

flag pedantic
  default: False
  manual: True

common library
  build-depends: base ^>=4.18.0.0 || ^>=4.19.0.0 || ^>=4.20.0.0
  build-depends:
    aeson ^>=2.1.2.1 || ^>=2.2.2.0,
    bytestring ^>=0.11.4.0 || ^>=0.12.0.2,
    data-default ^>=0.7.1.1,
    gpolyline ^>=0.1.0.1,
    http-client ^>=0.7.17,
    http-client-tls ^>=0.3.6.3,
    http-types ^>=0.12.4,
    template-haskell ^>=2.20.0.0 || ^>=2.21.0.0 || ^>=2.22.0.0,
    text ^>=2.0.2 || ^>=2.1,
    time ^>=1.12.2 || ^>=1.14,
    transformers ^>=0.6.1.0,

  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

library
  import: library
  -- cabal-gild: discover source/library
  exposed-modules:
    Strive
    Strive.Actions
    Strive.Actions.Activities
    Strive.Actions.Athletes
    Strive.Actions.Authentication
    Strive.Actions.Clubs
    Strive.Actions.Comments
    Strive.Actions.Efforts
    Strive.Actions.Friends
    Strive.Actions.Gear
    Strive.Actions.Kudos
    Strive.Actions.Photos
    Strive.Actions.Segments
    Strive.Actions.Streams
    Strive.Actions.Uploads
    Strive.Aliases
    Strive.Client
    Strive.Enums
    Strive.Internal.HTTP
    Strive.Internal.Lenses
    Strive.Internal.Options
    Strive.Internal.TH
    Strive.Lenses
    Strive.Options
    Strive.Options.Activities
    Strive.Options.Athletes
    Strive.Options.Authentication
    Strive.Options.Clubs
    Strive.Options.Comments
    Strive.Options.Friends
    Strive.Options.Kudos
    Strive.Options.Segments
    Strive.Options.Streams
    Strive.Options.Uploads
    Strive.Types
    Strive.Types.Activities
    Strive.Types.Athletes
    Strive.Types.Authentication
    Strive.Types.Clubs
    Strive.Types.Comments
    Strive.Types.Efforts
    Strive.Types.Gear
    Strive.Types.Photos
    Strive.Types.Polylines
    Strive.Types.Segments
    Strive.Types.Streams
    Strive.Types.Uploads
    Strive.Utilities

  hs-source-dirs: source/library
